changed admin overview

--- a/assets/admin_overview.html
+++ b/assets/admin_overview.html
@@ -16,7 +16,7 @@
                     $("#request_list").html(data.msg);
                     for(var i=0; i < data.msg.length; ++i)
                     {
-                        
+                        $("#request_list").append(data.msg[i]);
                     }
                 }
                 else
