--- a/assets/admin_overview.html
+++ b/assets/admin_overview.html
@@ -16,7 +16,7 @@
             {
                 var entry = entries[index];
                 $.post("http://"+url+"/admin_approve", 
-                        {approve:accept, email:entry.email, timestamp:entry.timestamp},
+                        {approve:accept, email:entry.email, duration: entry.duration, timestamp:entry.timestamp},
                         (data) => {});
                 console.log("#request_"+index);
                 if(accept)
@@ -55,13 +55,13 @@
             $(document).on("click", ".approve", function () {
                var clickedBtnID = $(this).attr('id');
                var index = clickedBtnID.substring(8, clickedBtnID.length);
-               respondToRequest(index, true);
+               respondToRequest(index, 1);
             });
 
             $(document).on("click", ".deny", function () {
                var clickedBtnID = $(this).attr('id');
                var index = clickedBtnID.substring(5, clickedBtnID.length);
-               respondToRequest(index, false);
+               respondToRequest(index, 0);
             });
         });
     </script>
